Finish README.md and correct package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gravity-resume",
+  "name": "vue-typescript-tpl",
   "version": "1.0.0",
   "description": "A simple project template of vue.js & typescript.",
   "author": "BearD01001 <dino@beard.ink>",
